[gd_scene load_steps=12 format=3 uid="uid://dcfo80cdg0dxs"]

[ext_resource type="Texture2D" uid="uid://bgowux58clx1i" path="res://resources/assets/icons(128)/pawn.png" id="1_1bxu8"]
[ext_resource type="Texture2D" uid="uid://bmo3q6ibtny4k" path="res://resources/assets/effects/Free Smoke Fx  Pixel 05.png" id="1_nb08g"]
[ext_resource type="Script" path="res://gui/entity.gd" id="1_psuop"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erp0l"]
atlas = ExtResource("1_nb08g")
region = Rect2(0, 704, 64, 64)

[sub_resource type="Animation" id="Animation_47yhl"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -48), Vector2(0, 10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.233333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.19), Vector2(1, 1.095), Vector2(1, 1), Vector2(1, 0.695), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(640, 704, 64, 64), Rect2(128, 704, 64, 64), Rect2(192, 704, 64, 64), Rect2(256, 704, 64, 64), Rect2(320, 704, 64, 64), Rect2(384, 704, 64, 64), Rect2(448, 704, 64, 64), Rect2(512, 704, 64, 64), Rect2(576, 704, 64, 64)]
}

[sub_resource type="Animation" id="Animation_r2lvs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:texture:region")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 704, 64, 64)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EntityTexture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d1ied"]
resource_name = "hit"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 14.195), Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.06, 0.75), Vector2(1, 1), Vector2(1, 1.125), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EntityTexture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.400759, 0, 0.0675923, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vqfvm"]
_data = {
"Attack": SubResource("Animation_47yhl"),
"RESET": SubResource("Animation_r2lvs"),
"hit": SubResource("Animation_d1ied")
}

[sub_resource type="Curve" id="Curve_d7ho5"]
max_value = 100.0
_data = [Vector2(0, 79.2553), 0.0, -97.4098, 0, 0, Vector2(0.507576, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_uo3ym"]
max_value = 2.0
_data = [Vector2(0, 0.994197), -1.65957, -1.65957, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_l7c3u"]
max_value = 3.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.828283, 3), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Entity" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("1_psuop")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(64, 104)
scale = Vector2(1, 1.0475)
texture = SubResource("AtlasTexture_erp0l")

[node name="LabelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Entity"

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_top = -24.0
offset_right = 128.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer"]
libraries = {
"": SubResource("AnimationLibrary_vqfvm")
}

[node name="Powerup" type="CPUParticles2D" parent="CenterContainer"]
position = Vector2(64, 100)
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
preprocess = 0.25
speed_scale = 3.0
local_coords = true
emission_shape = 2
emission_sphere_radius = 57.17
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, -200)
damping_min = 20.0
damping_max = 100.0
damping_curve = SubResource("Curve_d7ho5")
scale_amount_max = 3.0
split_scale = true
scale_curve_x = SubResource("Curve_uo3ym")
scale_curve_y = SubResource("Curve_l7c3u")
color = Color(0.602831, 0.57576, 0.586808, 1)

[node name="EntityTexture" type="TextureRect" parent="CenterContainer" groups=["Entities"]]
layout_mode = 2
texture = ExtResource("1_1bxu8")
stretch_mode = 5
